--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <h1>KOCHANIEEE</h1>
     <h3>Nudzi mi się trochę więc stwierdziłem że zrobię stronkę dla ciebie *-*</h3>
-    <img src="piesek.jpg" alt="kocham cię">
+    <img src="./piesek.jpg" alt="kocham cię">
     <div>
     <h3>Mam nadzieje że ci się podoba mimo że nie jest ta stronka jakoś fajnie zrobiona</h3>
     <p>A teraz chciałem ci powiedzięć coś jeszcze... <br> bo... <br> bo... <br> bo ja uważam że jesteś najpiękniejszą i najcudowniejszą
